Refactor issues